[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/custom/mountain.png" type="Texture" id=1]
[ext_resource path="res://Assets/custom/mountain2.png" type="Texture" id=2]
[ext_resource path="res://Assets/custom/mountain3.png" type="Texture" id=3]
[ext_resource path="res://Assets/more fonts/Gamepixies-8MO6n.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SplashScreen.gd" type="Script" id=5]
[ext_resource path="res://backgroundAnimation.tres" type="Animation" id=6]
[ext_resource path="res://Assets/music/jingles_NES13.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/player/platformChar_jump.png" type="Texture" id=8]
[ext_resource path="res://Assets/sounds/jump1.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0470588, 0.305882, 1, 0.207843 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "flyin"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("madeby:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1094.6, 141.421 ), Vector2( 388.909, 114.551 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("madeby:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.988235, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.988235, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.988235, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("madeby:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "playerjumping"
length = 3.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("playersprite:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 150, -0.25, 0, 0.05, 8.21654, 221.955, -0.09, -6.1557, 0.21, 26.798, 323.681, -0.1, -12.9324, 0.13, 18.3177, 411.235, -0.22, -19.1667, 0.08, 18.1426, 483.228, -0.15, -21.5398, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.75, 2.15 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("playersprite:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 602.248, -0.25, 0, 0.22, -207.414, -49.3732, -0.66, 85.4741, 0.82, 41.9285, 618.783, -0.19, -72.576, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=5]
resource_name = "groundDrop"
length = 3.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("titlescreen:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -600, -0.25, 0, 0.25, 0, -620, -0.25, 0, 0.82, 41.928, 0, -0.19, -72.576, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3.5 )
}

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="middlemountain" type="TextureRect" parent="."]
margin_left = 315.0
margin_top = 200.0
margin_right = 355.0
margin_bottom = 240.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="midtexture" type="TextureRect" parent="."]
margin_left = 315.0
margin_top = 200.0
margin_right = 355.0
margin_bottom = 240.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftmountain" type="TextureRect" parent="."]
margin_left = -79.3326
margin_top = 199.333
margin_right = -39.3326
margin_bottom = 239.333
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightmountain" type="TextureRect" parent="."]
margin_left = 685.412
margin_top = 127.04
margin_right = 725.412
margin_bottom = 167.04
rect_scale = Vector2( 10, 12 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="righttexture" type="TextureRect" parent="."]
margin_left = 716.108
margin_top = 204.204
margin_right = 756.108
margin_bottom = 244.204
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lefttexture" type="TextureRect" parent="."]
margin_left = -73.7738
margin_top = 281.847
margin_right = -33.7738
margin_bottom = 321.847
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="madeby" type="Label" parent="."]
margin_left = 1094.6
margin_top = 141.421
margin_right = 1352.62
margin_bottom = 274.424
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Made By:
Sidd!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titlescreen" type="ColorRect" parent="."]
margin_top = -600.0
margin_right = 1024.0
margin_bottom = -6.10352e-05
color = Color( 0.188235, 0, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AnimationPlayer1" type="AnimationPlayer" parent="."]
anims/background = ExtResource( 6 )
anims/flyin = SubResource( 3 )
anims/playerjumping = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/backgroundAnimation = ExtResource( 6 )
anims/groundDrop = SubResource( 5 )

[node name="MusicSplashScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="MusicTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="playersprite" type="TextureRect" parent="."]
margin_left = 150.0
margin_top = 602.248
margin_right = 246.001
margin_bottom = 698.248
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundJump" type="AudioStreamPlayer" parent="playersprite"]
stream = ExtResource( 9 )
volume_db = -20.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer1" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
